# GuakeGPT

./: .gitignore  README.md  pyproject.toml  requirements.txt
.specstory/history/: python-gtk-dropdown-chat-application.md
guakegpt/: app.py  cli.py
guakegpt/config/: settings.py
guakegpt/llm/: __init__.py  client.py
guakegpt/ui/: rich_text.py  settings_dialog.py  window.py
