[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "guakegpt"
version = "0.1.0"
description = "A GTK-based dropdown chat application that mimics Guake's terminal behavior"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "PyGObject>=3.42.0",
]

[project.scripts]
guakegpt = "guakegpt.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["guakegpt"] 